# SquidMod

./: Cargo.toml  Makefile  README.md  SquidModInstaller.nsi  build.rs  build.sh  entitlements.plist  flake.nix
.github/workflows/: ci.yml  release.yml
src/: id.rs  main.rs  platform.rs
src/gui/: asm_util.rs  match_info.rs  memory_viewer.rs  mod.rs  player_info.rs  plugin_manager.rs  scene_info.rs  utilities.rs
src/logic/: asmutil.rs  config.rs  matchinfo.rs  mod.rs  playerinfo.rs  sceneinfo.rs  telemetry.rs  utilities.rs
src/plugin/: ffi.rs  mod.rs  ui_def.rs
