[package]
name = "squidmod"
version = "8.0.0"
edition = "2024"
description = "Modding Tool for Splatoon on Cemu/Xapfish"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
gtk4 = { version = "0.11", features = ["v4_18"] }
libadwaita = { version = "0.9", features = ["v1_7"] }
libc = "0.2"
cfg-if = "1.0"
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.21"
sha1 = "0.10"
sha2 = "0.11"
image = "0.25.10"
wasmtime = { version = "44", features = ["cranelift"] }
directories = "6"
wasmparser = "0.250"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Diagnostics_Debug" ] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"
libproc = "0.14.11"

[[bin]]
name = "SquidMod"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"
